--- a/www/index.html
+++ b/www/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <ons-navigator var="navi" page="pages/main.html"></ons-navigator>
+    <ons-navigator var="navi" page="pages/page1.html"></ons-navigator>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="assets/bundle.js"></script>
 </body>
