--- a/www/pages/page2.html
+++ b/www/pages/page2.html
@@ -3,7 +3,7 @@
         <div class="center">{{ctrl.title}}</div>
     </ons-toolbar>
 
-    <p>This is the first page.</p>
+    <p>This is the second page.</p>
 
     <ons-button ng-click="ctrl.pop()">Pop page</ons-button>
 </ons-page>
