--- a/www/index.html
+++ b/www/index.html
@@ -11,7 +11,7 @@
     <title>Hello World</title>
 </head>
 
-<body>
+<body ng-cloak ng-strict-di>
     <ons-navigator var="navi" page="pages/page1.html"></ons-navigator>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="assets/bundle.js"></script>
