--- a/www/index.html
+++ b/www/index.html
@@ -8,13 +8,14 @@
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
     <meta http-equiv="Content-Security-Policy" content="default-src * gap: ws: https://ssl.gstatic.com;style-src 'self' 'unsafe-inline' data: blob:;script-src * 'unsafe-inline' 'unsafe-eval' data: blob:;">
     <link rel="stylesheet" type="text/css" href="assets/bundle.css" />
+    <script type="text/javascript" src="cordova.js"></script>
+    <script type="text/javascript" src="assets/vendor.bundle.js"></script>
+    <script type="text/javascript" src="assets/bundle.js"></script>
     <title>Hello World</title>
 </head>
 
 <body ng-cloak ng-strict-di>
     <ons-navigator var="navi" page="pages/page1.html"></ons-navigator>
-    <script type="text/javascript" src="cordova.js"></script>
-    <script type="text/javascript" src="assets/bundle.js"></script>
 </body>
 
 </html>
