--- a/www/pages/page1.html
+++ b/www/pages/page1.html
@@ -1,4 +1,4 @@
-<ons-page id="page1" ng-controller="Page1Controller as ctrl" ons-init="ctrl.init($event)">
+<ons-page ng-controller="Page1Controller as ctrl" ons-init="ctrl.init($event)">
  
     <ons-toolbar>
         <div class="center">{{ctrl.title}}</div>
