--- a/www/index.html
+++ b/www/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="assets/bundle.css" />
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="assets/vendor.bundle.js"></script>
-    <script type="text/javascript" src="assets/app.bundle.js"></script>
+    <script type="text/javascript" src="assets/bundle.js"></script>
     <title>Hello World</title>
 </head>
 
