--- a/www/pages/page2.html
+++ b/www/pages/page2.html
@@ -1,4 +1,4 @@
-<ons-page id="page2" ng-controller="Page2Controller as ctrl" ons-init="ctrl.init($event)">
+<ons-page ng-controller="Page2Controller as ctrl" ons-init="ctrl.init($event)">
     <ons-toolbar>
         <div class="center">{{ctrl.title}}</div>
     </ons-toolbar>
