--- a/src/html/page2.html
+++ b/src/html/page2.html
@@ -1,9 +1,11 @@
 <ons-page ng-controller="Page2Controller as ctrl" ons-init="ctrl.init($event)">
+    <!-- ツールバー -->
     <ons-toolbar>
         <div class="center">{{ctrl.title}}</div>
     </ons-toolbar>
 
     <p>This is the second page.</p>
 
+    <!-- ボタン -->
     <ons-button ng-click="ctrl.pop()">Pop page</ons-button>
 </ons-page>
