--- a/src/html/page2.html
+++ b/src/html/page2.html
@@ -2,6 +2,7 @@
     <!-- ツールバー -->
     <ons-toolbar>
         <div class="left">
+            <!-- バックボタン -->
             <ons-toolbar-button ng-click="ctrl.pop()">
                 <ons-icon icon="ion-ios-arrow-back, material:md-arrow-back" size="32px, material:24px"></ons-icon>
                 <ons-if platform="ios other" class="back-button__label">Back</ons-if>
