--- a/src/html/page1.html
+++ b/src/html/page1.html
@@ -1,7 +1,7 @@
 <ons-page ng-controller="Page1Controller as ctrl" ons-init="ctrl.init($event)">
     <!-- スプリッタ -->
     <ons-splitter var="splitter">
-        <ons-splitter-side page="html/splitter-side.html" side="left" width="220px" collapse swipeable></ons-splitter-side>
+        <ons-splitter-side page="html/splitter-side.html" side="left" width="220px" collapse="portrait" swipeable></ons-splitter-side>
         <ons-splitter-content page="html/splitter-content.html"></ons-splitter-content>
     </ons-splitter>
 </ons-page>
