--- a/src/html/splitter-side.html
+++ b/src/html/splitter-side.html
@@ -3,4 +3,10 @@
     <ons-toolbar>
         <div class="center">splitter-side</div>
     </ons-toolbar>
+
+    <ons-list>
+        <ons-list-header></ons-list-header>
+        <ons-list-item tappable>Home</ons-list-item>
+        <ons-list-item tappable>Setting</ons-list-item>
+    </ons-list>
 </ons-page>
